--- a/.github/workflows/aggregate.yml
+++ b/.github/workflows/aggregate.yml
@@ -1,7 +1,9 @@
 name: CI
 on:
+  push:
+    branches: [main, master]
   schedule:
-    # Every five minutes (maximum frequency allowed by GitHub)
+    # ttl is "every hour"
     - cron: "0 * * * *"
 
 permissions:
@@ -9,10 +11,8 @@ permissions:
 
 jobs:
   aggregate:
-    name: Aggregate Dependencies
+    name: Aggregate third-party lists
     runs-on: ubuntu-latest
-    env:
-      CARGO_VET_VERSION: 0.9.0
     steps:
       - name: Checkout
         uses: actions/checkout@v4
